--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,15 +1,14 @@
 <div class="container">
   <div class="roe">
     <div class="mx-auto">
-      <h3>商品一覧</h3>
+      <h3>注文履歴一覧</h3>
       <table class="table">
         <thead>
           <tr>
-            <th>商品ID</th>
-            <th>商品名</th>
-            <th>税抜価格</th>
-            <th>ジャンル</th>
-            <th>ステータス</th>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
           </tr>
         </thead>
         <tbody>
