[Add]実装課題２/３進捗分

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,12 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
             <% if customer_signed_in? %>
+            <font>ようこそ、<%= current_customer.first_name %>さん！</font>
             <li class="nav-item">
               <%= link_to "マイページ", mypage_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <p>商品一覧</p>
+              <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <p>カート</p>
@@ -39,7 +40,7 @@
               <%= link_to "商品一覧", admin_items_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <p>会員一覧</p>
+              <%= link_to "会員一覧", admin_customers_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <p>注文履歴一覧</p>
@@ -52,10 +53,10 @@
             </li>
             <% else %>
             <li class="nav-item">
-              <%= link_to "About", about_path, class: 'nav-item text-dark' %>
+              <%= link_to "About", about_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <p>商品一覧</p>
+              <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "新規登録", new_customer_registration_path, class: 'nav-link text-dark' %>
