--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,5 +1,11 @@
-<h3>会員情報編集</h3>
-<%= form_with model: @customer, url: customers_path, method: :patch, local:true do |f| %>
+<h3><%= @customer.first_name %><%= @customer.last_name %>さんの会員情報編集</h3>
+<%= form_with model: @customer, url: admin_customer_path, method: :patch, local:true do |f| %>
+
+  <div class="field">
+    <font>会員ID</font>
+    <%= @customer.id %>
+  </div>
+
   <div class="field">
     <%= f.label "名前" %>
     <%= f.label :first_name, "(性)" %>
@@ -36,8 +42,16 @@
     <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
+  <div class="field">
+    <font>会員ステータス</font>
+    <%= f.radio_button :is_active, :true, checked: true %>
+    <%= f.label :is_active, "有効" %>
+    <%= f.radio_button :is_active, :false %>
+    <%= f.label :is_active, "退会" %>
+  </div>
+
   <div class="actions">
     <%= f.submit "編集内容を保存", class: "btn btn-success" %>
-    <%= link_to "退会する", confirm_withdraw_path, class: "btn btn-primary" %>
   </div>
 <% end %>
+
