--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="roe">
+  <div class="row">
       <h3>商品詳細</h3>
       <div class="col-md-4">
         <p><%= attachment_image_tag @item, :image, size: "300x200" %>
