--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,1 +1,18 @@
-<h1>aaaarail</h1>
+<div class="container">
+  <div class="row">
+    <h2>商品一覧(全<%= @items.count %>件）</h2>
+  </div>
+  <div class="row">
+    <% @items.each do |item| %>
+      <div class="col-lg-3 col-md-6 mb-4">
+        <p><%= attachment_image_tag item, :image, :fill, 230, 125, format: 'jpeg' %></p>
+        <%= link_to item_path(item.id) do %>
+          <p><%= item.name %></p>
+        <% end %>
+        <p>￥<%= item.price %></p>
+      </div>
+    <% end %>
+    </div>
+  </div>
+</div>
+<%= paginate @items %>
