--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <p>カート</p>
+              <%= link_to "カート", cart_items_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dark' %>
