[Add]実装課題2/8.19:00進捗分

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>会員情報編集</h3>
+<h3 class="page-tatle">会員情報編集</h3>
 <%= form_with model: @customer, url: customers_path, method: :patch, local:true do |f| %>
   <div class="field">
     <%= f.label "名前" %>
@@ -38,6 +38,6 @@
 
   <div class="actions">
     <%= f.submit "編集内容を保存", class: "btn btn-success" %>
-    <%= link_to "退会する", confirm_withdraw_path, class: "btn btn-primary" %>
+    <%= link_to "退会する", confirm_withdraw_path, class: "btn btn-danger" %>
   </div>
 <% end %>
