--- a/app/views/public/ordes/index.html.erb
+++ b/app/views/public/ordes/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto">
-      <h3>注文履歴一覧</h3>
-      <table class="table">
-        <thead>
+      <h3 class="page-tatle">注文履歴一覧</h3>
+      <table class="table table-bordered">
+        <thead class="table-secondary">
           <tr>
             <th>注文日</th>
             <th>配送先</th>
