--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,11 @@
 .pagination {
   justify-content: center;
 }
+
+.page-tatle {
+  display: inline-block;
+  font-size: 20px;
+  line-height: 1.4em;
+  padding: 5px;
+  background: #d6d8db;
+}
