--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<h3><%= @customer.first_name %><%= @customer.last_name %>さんの会員情報編集</h3>
+<h3 class="page-tatle"><%= @customer.first_name %><%= @customer.last_name %>さんの会員情報編集</h3>
 <%= form_with model: @customer, url: admin_customer_path, method: :patch, local:true do |f| %>
 
   <div class="field">
@@ -54,4 +54,3 @@
     <%= f.submit "編集内容を保存", class: "btn btn-success" %>
   </div>
 <% end %>
-
