--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
+  <h3 class="page-tatle">ジャンル編集</h3>
   <div class="row">
-    <div class="mx-auto">
-      <h2>ジャンル編集</h2>
-      <%= form_with model: @genre, url: admin_genre_path, method: :patch, local:true do |f| %>
-        <label for="InputGenre">ジャンル名</label>
-        <%= f.text_field :name %>
-        <%= f.submit "変更を保存" %>
-      <% end %>
+    <div class="col-12">
+    <%= form_with model: @genre, url: admin_genre_path, method: :patch, local:true do |f| %>
+      <label class="col-2">ジャンル名</label>
+      <%= f.text_field :name, class: "col-5 mr-5" %>
+      <%= f.submit "変更を保存", class: "btn btn-success" %>
+    <% end %>
     </div>
   </div>
 </div>
