--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,20 +1,30 @@
 <div class="container">
-  <div class="roe">
-    <div class="mx-auto">
-      <h3>注文履歴一覧</h3>
+  <div class="row">
+    <div class="col-12">
+      <h3 class="page-tatle">注文履歴一覧</h3>
       <table class="table">
-        <thead>
+        <thead class="table-secondary">
           <tr>
             <th>購入日時</th>
             <th>購入者</th>
             <th>注文個数</th>
-            <th>注文ステータス</th>
           </tr>
         </thead>
         <tbody>
-
+          <% @ordes.each do |orde| %>
+          <tr>
+            <td>
+              <%= link_to admin_orde_path(orde.id) do %>
+                <%= orde.created_at %>
+              <% end %>
+            </td>
+            <td><%= orde.name %></td>
+            <td><%= orde.orders_details.count %></td>
+          </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
   </div>
 </div>
+<%= paginate @ordes %>
