--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,32 +1,35 @@
 <div class="container">
+  <h3 class="page-tatle">商品編集</h3>
   <div class="row">
     <div class="mx-auto">
-      <h3>商品編集</h3>
       <%= form_with model: @item, url: admin_item_path, method: :patch, local:true do |f| %>
-      <div>
-        <%= f.label :商品画像 %>
-        <%= f.attachment_field :image %>
+      <div class="row">
+        <%= f.label :商品画像, class: "col-3" %>
+        <%= f.attachment_field :image, class: "col-9" %>
       </div>
-      <div>
-        <%= f.label :商品名 %>
-        <%= f.text_field :name %>
+      <p></p>
+      <div class="row">
+        <%= f.label :商品名, class: "col-3" %>
+        <%= f.text_field :name, class: "col-9" %>
       </div>
-      <div>
-        <%= f.label :商品説明 %>
-        <%= f.text_area :introduction %>
+      <p></p>
+      <div class="row">
+        <%= f.label :商品説明, class: "col-3" %>
+        <%= f.text_area :introduction, class: "col-9" %>
       </div>
-      <div>
-        <%= f.label :ジャンル　%>
-        <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: '--選択してください--' %>
+      <p></p>
+      <div class="row">
+        <%= f.label :ジャンル, class: "col-3" %>
+        <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: '--選択してください--', class: "col-9" %>
       </div>
-      <div>
-        <%= f.label :税抜価格 %>
-        <%= f.text_field :price %>円
+      <p></p>
+      <div class="row">
+        <%= f.label :税抜価格, class: "col-3" %>
+        <%= f.text_field :price, class: "col-8" %>円
       </div>
-      <div>
-         <%= f.label :販売ステータス　%>
-      </div>
-      <div>
+      <p></p>
+      <div class="row">
+        <div class="col-5"></div>
         <%= f.submit '変更を保存', class: "btn btn-success" %>
       </div>
       <% end %>
