--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,33 +1,36 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto">
-      <h3>商品新規登録</h3>
+      <h3 class="page-tatle">商品新規登録</h3>
       <%= form_with model: @item, url: admin_items_path, method: :post, local: true do |f| %>
-      <div>
-        <%= f.label :商品画像 %>
-        <%= f.attachment_field :image %>
+      <div class="row">
+        <%= f.label :商品画像, class: "col-lg-3" %>
+        <%= f.attachment_field :image, class: "col-lg-9" %>
       </div>
-      <div>
-        <%= f.label :商品名 %>
-        <%= f.text_field :name %>
+      <p></p>
+      <div class="row">
+        <%= f.label :商品名, class: "col-lg-3" %>
+        <%= f.text_field :name, class: "col-lg-9" %>
       </div>
-      <div>
-        <%= f.label :商品説明 %>
-        <%= f.text_area :introduction %>
+      <p></p>
+      <div class="row">
+        <%= f.label :商品説明, class: "col-lg-3" %>
+        <%= f.text_area :introduction, class: "col-lg-9" %>
       </div>
-      <div>
-        <%= f.label :ジャンル　%>
-        <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: '--選択してください--' %>
+      <p></p>
+      <div class="row">
+        <%= f.label :ジャンル, class: "col-lg-3" %>
+        <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: '--選択してください--', class: "col-lg-9" %>
       </div>
-      <div>
-        <%= f.label :税抜価格 %>
-        <%= f.text_field :price %>円
+      <p></p>
+      <div class="row">
+        <%= f.label :税抜価格, class: "col-lg-3" %>
+        <%= f.text_field :price, class: "col-lg-8" %>円
       </div>
-      <div>
-         <%= f.label :販売ステータス　%>
-      </div>
-      <div>
-        <%= f.submit '新規登録', class: "btn btn-success" %>
+      <p></p>
+      <div class="row">
+        <div class="col-lg-4"></div>
+        <%= f.submit '新規登録', class: "btn btn-success col-lg-4" %>
       </div>
       <% end %>
     </div>
