--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,16 +1,24 @@
 <div class="container">
+  <h3 class="page-tatle">商品詳細</h3>
   <div class="row">
-      <h3>商品詳細</h3>
-      <div class="col-md-4">
-        <p><%= attachment_image_tag @item, :image, size: "300x200" %>
-      </div>
-      <div class="col-md-8">
-        <p>商品名 <%= @item.name %></p>
-        <p>商品説明 <%= @item.introduction %></p>
-        <p>ジャンル <%= @item.genre_id %></p>
-        <p>税込価格 <%= @item.price %></p>
-        <p>販売ステータス</p>
-        <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-success" %>
-      </div>
+    <div class="col-lg-4">
+      <p><%= attachment_image_tag @item, :image, size: "300x200" %>
+    </div>
+    <div class="col-lg-3">
+      <p>商品名</p>
+      <p>商品説明</p>
+      <p>ジャンル</p>
+      <p>税込価格</p>
+    </div>
+    <div class="col-lg-5">
+      <p><%= @item.name %></p>
+      <p><%= @item.introduction %></p>
+      <p><%= @item.genre.name %></p>
+      <p><%= @item.price %>円</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6"></div>
+    <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-success" %>
   </div>
 </div>
