--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
               <%= link_to "会員一覧", admin_customers_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <p>注文履歴一覧</p>
+              <%= link_to "注文履歴一覧", admin_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-dark' %>
