--- a/app/views/public/ordes/show.html.erb
+++ b/app/views/public/ordes/show.html.erb
@@ -1,8 +1,71 @@
 <div class="container">
+  <h3 class="page-tatle">注文履歴詳細</h3>
   <div class="row">
-    <div class="mx-auto">
-      <h3>注文履歴詳細</h3>
 
+    <div class="col-lg-6">
+      <label>注文情報</label>
+      <table class="table table-bordered">
+        <tr>
+          <th class="table-secondary">注文日</th>
+          <td><%= @orde.created_at %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">配送先</th>
+          <td>
+            <p>〒<%= @orde.postal_code %></p>
+            <p><%= @orde.address %></p>
+            <p><%= @orde.name %></p>
+          </td>
+        </tr>
+        <tr>
+          <th class="table-secondary">支払方法</th>
+          <td><%= @orde.payment_i18n %></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-lg-3">
+      <label>請求情報</label>
+      <table class="table table-bordered">
+        <tr>
+          <th class="table-secondary">商品合計</th>
+          <td><%= @orde.total_payment %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">配送料</th>
+          <td><%= @orde.shipping_cost %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">ご請求額</th>
+          <td><%= @orde.total_payment %></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-lg-3">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+    <label>注文内容</label>
+    <table class="table table-bordered">
+      <thead class="table table-secondary">
+        <tr>
+          <th>商品</th>
+          <th>単価(税込)</th>
+          <th>個数</th>
+          <th>小計</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <% @orde.orders_details.each do |detail| %>
+          <td><%= detail.item.name %></td>
+          <td><%= detail.item.with_tax_price %></td>
+          <td><%= detail.amount %></td>
+          <td><%= detail.item.with_tax_price * detail.amount %></td>
+          <% end %>
+        </tr>
+      </tbody>
+    </table>
     </div>
   </div>
 </div>
