[Add]実装課題2/9.18:00進捗分

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,8 +23,12 @@
 
 .page-tatle {
   display: inline-block;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.4em;
   padding: 5px;
+  margin-top: 25px;
+  margin-left: 80px;
+  margin-bottom: 25px;
   background: #d6d8db;
 }
+
