--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,56 +1,39 @@
-<h3 class="page-tatle"><%= @customer.first_name %><%= @customer.last_name %>さんの会員情報編集</h3>
-<%= form_with model: @customer, url: admin_customer_path, method: :patch, local:true do |f| %>
-
-  <div class="field">
-    <font>会員ID</font>
-    <%= @customer.id %>
+<div class="container">
+  <h4 class="page-tatle"><%= @customer.first_name %><%= @customer.last_name %>さんの会員情報編集</h4>
+  <div class="row">
+    <div class="col-3">
+      <p>会員ID</p>
+      <p>氏名</p>
+      <p>フリガナ</p>
+      <p>郵便番号</p>
+      <p>住所</p>
+      <p>電話番号</p>
+      <p>メールアドレス</p>
+      <p>会員ステータス</p>
+    </div>
+    <div class="col-7">
+      <%= form_with model: @customer, url: admin_customer_path, method: :patch, local:true do |f| %>
+      <p><%= @customer.id %></p>
+      <p>
+        <%= f.text_field :first_name, autofocus: true, class: "mr-5" %>
+        <%= f.text_field :last_name, autofocus: true %>
+      </p>
+      <p>
+        <%= f.text_field :first_name_kana, class: "mr-5" %>
+        <%= f.text_field :last_name_kana %>
+      </p>
+      <p><%= f.text_field :postal_code %></p>
+      <p><%= f.text_field :address %></p>
+      <p><%= f.text_field :telephone_number %></p>
+      <p><%= f.email_field :email, autocomplete: "email" %></p>
+      <p>
+        <%= f.radio_button :is_active, :true, checked: true %>
+        <%= f.label :is_active, "有効" %>
+        <%= f.radio_button :is_active, :false %>
+        <%= f.label :is_active, "退会" %>
+      </p>
+      <%= f.submit "編集内容を保存", class: "btn btn-success" %>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label "名前" %>
-    <%= f.label :first_name, "(性)" %>
-    <%= f.text_field :first_name, autofocus: true %>
-    <%= f.label :last_name, "(名)" %>
-    <%= f.text_field :last_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label "フリガナ" %>
-    <%= f.label :first_name_kana, "(セイ)" %>
-    <%= f.text_field :first_name_kana %>
-    <%= f.label :last_name_kana, "(メイ)" %>
-    <%= f.text_field :last_name_kana %>
-  </div>
-
-  <div class="field">
-    <%= f.label "郵便番号" %>
-    <%= f.text_field :postal_code %>
-  </div>
-
-  <div class="field">
-    <%= f.label "住所" %>
-    <%= f.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= f.label "電話番号" %>
-    <%= f.text_field :telephone_number %>
-  </div>
-
-  <div class="field">
-    <%= f.label "メールアドレス" %>
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <font>会員ステータス</font>
-    <%= f.radio_button :is_active, :true, checked: true %>
-    <%= f.label :is_active, "有効" %>
-    <%= f.radio_button :is_active, :false %>
-    <%= f.label :is_active, "退会" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "編集内容を保存", class: "btn btn-success" %>
-  </div>
-<% end %>
+</div>
