--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -15,7 +15,7 @@
           <tr>
             <td>
               <%= link_to admin_orde_path(orde.id) do %>
-                <%= orde.created_at %>
+                <%= orde.created_at.strftime('%Y/%m/%d') %>
               <% end %>
             </td>
             <td><%= orde.name %></td>
