--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-2">
+    <div class="col-lg-3">
       <h3 class="page-tatle">商品一覧</h3>
     </div>
-    <div class="col-lg-9"></div>
+    <div class="col-lg-8"></div>
     <div>
-      <%= link_to new_admin_item_path, class: "btn btn-default" do %>
+      <%= link_to new_admin_item_path, class: "btn btn-default mt-4" do %>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -29,7 +29,7 @@
             </td>
             <td>
               <%= link_to admin_item_path(item.id) do %>
-                <p><%= item.name %></p>
+                <p class="text-dark"><%= item.name %></p>
               <% end %>
             </td>
             <td>
@@ -45,3 +45,4 @@
     </div>
   </div>
 </div>
+<%= paginate @items %>
