--- a/app/views/admin/ordes/show.html.erb
+++ b/app/views/admin/ordes/show.html.erb
@@ -42,18 +42,18 @@
       </table>
     </div>
     <div class="col-3">
-      <table class="table table-bordered">
+      <table class="table">
         <tr>
           <th>商品合計</th>
-          <td><%= @orde.total_payment - @orde.shipping_cost %></td>
+          <td><%= @orde.total_payment - @orde.shipping_cost %>円</td>
         </tr>
         <tr>
           <th>送料</th>
-          <td><%= @orde.shipping_cost %></td>
+          <td><%= @orde.shipping_cost %>円</td>
         </tr>
         <tr>
           <th>請求金額合計</th>
-          <td><%= @orde.total_payment %></td>
+          <td><%= @orde.total_payment %>円</td>
         </tr>
       </table>
     </div>
