--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="mx-auto">
-      <h3>ショッピングカート</h3>
-      <%= link_to "カートを空にする", cart_items_destroy_all_path(@cart_items), method: :delete, class: "btn btn-danger" %>
-      <table class="table">
+    <div class="col-12">
+      <h3 class="page-tatle">ショッピングカート</h3>
+      <%= link_to "カートを空にする", cart_items_destroy_all_path(@cart_items), method: :delete, class: "btn btn-danger float-right mt-4" %>
+      <table class="table table-bordered">
         <thead>
           <th>商品名</th>
           <th>単価(税込)</th>
@@ -36,14 +36,26 @@
             <% @total_money +=  cart_item.subtotal %>
           </tr>
         <% end %>
-          <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
-          <tr>
-            <label>合計金額</label>
-            <%= @total_money %>
-          </tr>
-          <%= link_to "情報入力に進む", new_orde_path, class: "btn btn-success" %>
         </tbody>
       </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 offset-md-1">
+      <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
+    </div>
+    <div class="col-md-3 offset-md-3">
+      <table class="table table-bordered">
+        <tr class="text-right">
+          <th class="table-secondary col-2">合計金額</th>
+          <td class="col-2"><%= @total_money %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="mx-auto">
+      <%= link_to "情報入力に進む", new_orde_path, class: "btn btn-success" %>
     </div>
   </div>
 </div>
