--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,43 +1,47 @@
-<h3 class="page-tatle">会員情報編集</h3>
-<%= form_with model: @customer, url: customers_path, method: :patch, local:true do |f| %>
-  <div class="field">
-    <%= f.label "名前" %>
-    <%= f.label :first_name, "(性)" %>
-    <%= f.text_field :first_name, autofocus: true %>
-    <%= f.label :last_name, "(名)" %>
-    <%= f.text_field :last_name, autofocus: true %>
+<div class="container">
+  <h3 class="page-tatle">会員情報編集</h3>
+  <div class="row">
+    <div class="col-12">
+      <%= form_with model: @customer, url: customers_path, method: :patch, local:true do |f| %>
+        <div class="field row">
+          <%= f.label "名前", class: "col-lg-2" %>
+          <%= f.text_field :first_name, autofocus: true, class: "mr-5" %>
+          <%= f.text_field :last_name, autofocus: true %>
+        </div>
+        <p></p>
+        <div class="field row">
+          <%= f.label "フリガナ", class: "col-lg-2" %>
+          <%= f.text_field :first_name_kana, class: "mr-5" %>
+          <%= f.text_field :last_name_kana %>
+        </div>
+        <P></P>
+        <div class="field row">
+          <%= f.label "郵便番号", class: "col-lg-2" %>
+          <%= f.text_field :postal_code %>
+        </div>
+        <p></p>
+        <div class="field row">
+          <%= f.label "住所", class: "col-lg-2" %>
+          <%= f.text_field :address, class: "col-4" %>
+        </div>
+        <p></p>
+        <div class="field row">
+          <%= f.label "電話番号", class: "col-lg-2" %>
+          <%= f.text_field :telephone_number %>
+        </div>
+        <p></p>
+        <div class="field row">
+          <%= f.label "メールアドレス", class: "col-lg-2" %>
+          <%= f.email_field :email, autocomplete: "email" %>
+        </div>
+        <p></p>
+        <div class="actions row">
+          <div class="col-lg-2"></div>
+          <%= f.submit "編集内容を保存", class: "btn btn-success" %>
+          <div class="col-2"></div>
+          <%= link_to "退会する", confirm_withdraw_path, class: "btn btn-danger" %>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label "フリガナ" %>
-    <%= f.label :first_name_kana, "(セイ)" %>
-    <%= f.text_field :first_name_kana %>
-    <%= f.label :last_name_kana, "(メイ)" %>
-    <%= f.text_field :last_name_kana %>
-  </div>
-
-  <div class="field">
-    <%= f.label "郵便番号" %>
-    <%= f.text_field :postal_code %>
-  </div>
-
-  <div class="field">
-    <%= f.label "住所" %>
-    <%= f.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= f.label "電話番号" %>
-    <%= f.text_field :telephone_number %>
-  </div>
-
-  <div class="field">
-    <%= f.label "メールアドレス" %>
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "編集内容を保存", class: "btn btn-success" %>
-    <%= link_to "退会する", confirm_withdraw_path, class: "btn btn-danger" %>
-  </div>
-<% end %>
+</div>
