--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,44 +1,43 @@
-<h3 class="page-tatle">マイページ</h3>
-<div>
-  <label>登録情報</label>
-  <%= link_to "編集する", edit_customers_path, class: "btn btn-success" %>
-</div>
-<div class="row">
-  <div class="col-lg-12">
-    <table class="tatle table-bordered">
-      <tr>
-        <th class="table-secondary">氏名</th>
-        <td><%= @customer.first_name %><%= @customer.last_name %></td>
-      </tr>
-      <tr>
-        <th class="table-secondary">カナ</th>
-        <td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td>
-      </tr>
-      <tr>
-        <th class="table-secondary">郵便番号</th>
-        <td><%= @customer.postal_code %></td>
-      </tr>
-      <tr>
-        <th class="table-secondary">住所</th>
-        <td><%= @customer.address %></td>
-      </tr>
-      <tr>
-        <th class="table-secondary">電話番号</th>
-        <td><%= @customer.telephone_number %></td>
-      </tr>
-      <tr>
-        <th class="table-secondary">メールアドレス</th>
-        <td><%= @customer.email %></td>
-      </tr>
-    </table>
+<div class="container">
+  <h3 class="page-tatle">マイページ</h3>
+  <div>
+    <font size="5" class="mr-5">登録情報</font>
+    <%= link_to "編集する", edit_customers_path, class: "btn btn-success" %>
   </div>
-</div>
-
-<div>
-  <p>配送先</p>
-</div>
-
-<div>
-  <label>注文履歴</label>
-  <%= link_to "一覧を見る", ordes_path, class: "btn btn-primary" %>
+  <p></p>
+  <div class="row">
+    <div class="col-lg-6">
+      <table class="table table-bordered">
+        <tr>
+          <th class="table-secondary col-4">氏名</th>
+          <td><%= @customer.first_name %><%= @customer.last_name %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">カナ</th>
+          <td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">郵便番号</th>
+          <td><%= @customer.postal_code %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">住所</th>
+          <td><%= @customer.address %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">電話番号</th>
+          <td><%= @customer.telephone_number %></td>
+        </tr>
+        <tr>
+          <th class="table-secondary">メールアドレス</th>
+          <td><%= @customer.email %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <p></p>
+  <div>
+    <font size="5" class="mr-5">注文履歴</font>
+    <%= link_to "一覧を見る", ordes_path, class: "btn btn-primary" %>
+  </div>
 </div>
