--- a/app/views/public/customers/withdraw.html.erb
+++ b/app/views/public/customers/withdraw.html.erb
@@ -1,13 +1,12 @@
-<h1>本当に退会しますか？</h1>
-<h4>
+<h1 class="text-center mt-5">本当に退会しますか？</h1>
+<p class="mt-5 mb-5"></p>
+<h4 class="text-center">
   退会すると、会員登録情報や<br>
   これまでの購入履歴が閲覧できなくなります。<br>
   退会する場合は、「退会する」をクリックしてください
 </h4>
-
-
-<div>
-  <%= link_to "退会しない", mypage_path, class: "btn btn-primary" %>
+<p class="mt-5 mb-5"></p>
+<div class="text-center">
+  <%= link_to "退会しない", mypage_path, class: "btn btn-primary mr-5" %>
   <%= link_to "退会する", change_customers_path, method: :patch, class: "btn btn-danger" %>
 </div>
-
