--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,12 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto">
-      <h1>About</h1>
-      <h3>
+      <h1 class="text-center mt-5">About</h1>
+      <h3 class="text-center mt-5">
         ながのCAKEは全国発送可能なケーキ屋さんです。<br>
         お子様からお年寄りの方までお召し上がりいただけるよう、<br>
         様々なバリエーションをご用意しております。<br>
         また、全国への発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+        ぜひご注文ください。
       </h3>
     </div>
   </div>
