--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,24 +1,27 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-2">
-      <thead>
-        <h3>ジャンル</h3>
-      </thead>
-      <tbody>
-
-      </tbody>
-    </div>
-    <div class="col-lg-10">
+    <div class="col-2"></div>
+    <div class="col-lg-10 mt-5">
       <h3>
         ようこそ、ながのCAKEへ！<br>
         このさいとは、ケーキ販売のECサイトになります。<br>
         会員でない方も商品の閲覧はできますが、<br>
         購入には会員登録が必要になります。<br>
       </h3>
-
-      <h3>新着商品</h3>
-
-
     </div>
   </div>
+  <p class="mt-5 mb-3"></p>
+  <h3 class="mb-5">新着商品</h3>
+  <div class="row">
+    <% @items.each do |item| %>
+    <div class="col-lg-3 col-md-6 mb-4">
+      <p><%= attachment_image_tag item, :image, :fill, 200, 150, format: 'jpeg' %></p>
+      <%= link_to item_path(item.id) do %>
+        <p><%= item.name %></p>
+      <% end %>
+      <P>￥<%= item.price %></P>
+    </div>
+    <% end %>
+  </div>
+  <%= link_to "全ての商品を見る＞", items_path, class: "float-right" %>
 </div>
