--- a/app/views/public/ordes/index.html.erb
+++ b/app/views/public/ordes/index.html.erb
@@ -28,7 +28,7 @@
             </td>
             <td><%= orde.total_payment %></td>
             <td>
-              <%= link_to "詳細", orde_path(orde), class: "btn btn-success" %>
+              <%= link_to "表示する", orde_path(orde), class: "btn btn-primary" %>
             </td>
           </tr>
           <% end %>
@@ -37,3 +37,4 @@
     </div>
   </div>
 </div>
+<%= paginate @ordes %>
