--- a/app/views/public/ordes/show.html.erb
+++ b/app/views/public/ordes/show.html.erb
@@ -3,8 +3,8 @@
   <div class="row">
 
     <div class="col-lg-6">
-      <label>注文情報</label>
-      <table class="table table-bordered">
+      <font size="5">注文情報</font>
+      <table class="table table-bordered border-dark">
         <tr>
           <th class="table-secondary">注文日</th>
           <td><%= @orde.created_at %></td>
@@ -24,11 +24,11 @@
       </table>
     </div>
     <div class="col-lg-3">
-      <label>請求情報</label>
+      <font size="5">請求情報</font>
       <table class="table table-bordered">
         <tr>
           <th class="table-secondary">商品合計</th>
-          <td><%= @orde.total_payment %></td>
+          <td><%= @orde.total_payment - @orde.shipping_cost %></td>
         </tr>
         <tr>
           <th class="table-secondary">配送料</th>
@@ -45,7 +45,7 @@
   </div>
   <div class="row">
     <div class="col-lg-12">
-    <label>注文内容</label>
+    <font size="5">注文内容</font>
     <table class="table table-bordered">
       <thead class="table table-secondary">
         <tr>
@@ -56,14 +56,14 @@
         </tr>
       </thead>
       <tbody>
+        <% @orde.orders_details.each do |detail| %>
         <tr>
-          <% @orde.orders_details.each do |detail| %>
           <td><%= detail.item.name %></td>
           <td><%= detail.item.with_tax_price %></td>
           <td><%= detail.amount %></td>
           <td><%= detail.item.with_tax_price * detail.amount %></td>
-          <% end %>
         </tr>
+        <% end %>
       </tbody>
     </table>
     </div>
