--- a/app/views/public/ordes/thanks.html.erb
+++ b/app/views/public/ordes/thanks.html.erb
@@ -1,1 +1,5 @@
-<h1>ご注文ありがとうございました！</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <h1 style="margin-top: 250px;">ご注文ありがとうございました！</h1>
+  </div>
+</div>
