--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,57 +1,65 @@
-<h2>新規会員登録</h2>
-<%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+<div class="container">
+  <h3 class="page-tatle">新規会員登録</h3>
+  <div class="row">
+    <div class="col-12">
+    <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
+      <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label "名前" %>
-    <%= f.label :first_name, "(性)" %>
-    <%= f.text_field :first_name, autofocus: true %>
-    <%= f.label :last_name, "(名)" %>
-    <%= f.text_field :last_name, autofocus: true %>
+      <div class="row">
+        <%= f.label "名前", class: "col-lg-3" %>
+        <%= f.label :first_name, "(性)", class: "ml-3" %>
+        <%= f.text_field :first_name, autofocus: true, class: "mr-5" %>
+        <%= f.label :last_name, "(名)" %>
+        <%= f.text_field :last_name, autofocus: true %>
+      </div>
+      <p></p>
+      <div class="row">
+        <%= f.label "フリガナ", class: "col-lg-3" %>
+        <%= f.label :first_name_kana, "(セイ)" %>
+        <%= f.text_field :first_name_kana, class: "mr-5" %>
+        <%= f.label :last_name_kana, "(メイ)" %>
+        <%= f.text_field :last_name_kana %>
+      </div>
+      <p></p>
+      <div class="row">
+        <%= f.label "メールアドレス", class: "col-lg-3" %>
+        <%= f.email_field :email, autocomplete: "email" %>
+      </div>
+      <p></p>
+      <div class="row">
+        <%= f.label "郵便番号(ハイフンなし)", class: "col-lg-3" %>
+        <%= f.text_field :postal_code %>
+      </div>
+      <p></p>
+      <div class="row">
+        <%= f.label "住所", class: "col-lg-3" %>
+        <%= f.text_field :address, class: "col-lg-5" %>
+      </div>
+      <p></p>
+      <div class="row">
+        <%= f.label "電話番号(ハイフンなし)", class: "col-lg-3" %>
+        <%= f.text_field :telephone_number %>
+      </div>
+      <p></p>
+      <div class="row">
+        <%= f.label "パスワード(６文字以上)", class: "col-lg-3" %>
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+      <p></p>
+      <div class="row">
+        <%= f.label "パスワード(確認用)", class: "col-lg-3" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+      <p></p>
+      <div class="row">
+        <div class="col-lg-3"></div>
+        <%= f.submit "新規登録", class: "btn btn-success" %>
+      </div>
+    <% end %>
+
+    <h4 class="page-tatle">既に登録済みの方</h4>
+    <p><%= link_to "こちら", new_customer_session_path %>からログインしてください。</p>
+
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label "フリガナ" %>
-    <%= f.label :first_name_kana, "(セイ)" %>
-    <%= f.text_field :first_name_kana %>
-    <%= f.label :last_name_kana, "(メイ)" %>
-    <%= f.text_field :last_name_kana %>
-  </div>
-
-  <div class="field">
-    <%= f.label "メールアドレス" %>
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label "郵便番号(ハイフンなし)" %>
-    <%= f.text_field :postal_code %>
-  </div>
-
-  <div class="field">
-    <%= f.label "住所" %>
-    <%= f.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= f.label "電話番号(ハイフンなし)" %>
-    <%= f.text_field :telephone_number %>
-  </div>
-
-  <div class="field">
-    <%= f.label "パスワード(６文字以上)" %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label "パスワード(確認用)" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "新規登録", class: "btn btn-success" %>
-  </div>
-<% end %>
-
-<h3>既に登録済みの方</h3>
-<%= link_to "こちら", new_customer_session_path %>からログインしてください。
+</div>
