[update]withdraw.htmlの修正

--- a/app/views/public/customers/withdraw.html.erb
+++ b/app/views/public/customers/withdraw.html.erb
@@ -8,5 +8,5 @@
 <p class="mt-5 mb-5"></p>
 <div class="text-center">
   <%= link_to "退会しない", mypage_path, class: "btn btn-primary mr-5" %>
-  <%= link_to "退会する", change_customers_path, method: :patch, class: "btn btn-danger" %>
+  <%= link_to "退会する", change_customers_path, method: :patch, data: {confirm: "本当に退会しますか？"}, class: "btn btn-danger" %>
 </div>
